--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "asmit/filament-upload": "^1.1",
         "codeat3/blade-solar-icons": "^1.3",
+        "filafly/brisk": "^1.0",
         "filament/filament": "^4.5",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1"
